Fix entity property reference behaviour